--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,7 @@
 include_directories(.)
 file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.c*)
 
-add_executable(Question2.cpp ${SRC})
+aux_source_directory(./COVID_19_TestSystem CPP_LIST)
+aux_source_directory(./Personnel CPP_LIST2)
+aux_source_directory(./TestTube CPP_LIST3)
+add_executable(Question2.cpp ${SRC}  ${CPP_LIST2} ${CPP_LIST3} ${CPP_LIST})
